--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.3.0",
     "mongoose": "^8.0.4"
   }
 }
